
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int ) ;
 int printf (char*) ;

void usage(){
 printf("[\n");
 printf("[ --server|-s <ip/dns>    - the server to target\n");
 printf("[ --port|-p   <port>      - the port to target\n");
 printf("[ --file|-f   <filename>  - file to write data to\n");
 printf("[ --bind|-b   <ip>        - bind to ip for exploiting clients\n");
 printf("[ --precmd|-c <n>         - send precmd buffer (STARTTLS)\n");
 printf("[			    0 = SMTP\n");
 printf("[			    1 = POP3\n");
 printf("[			    2 = IMAP\n");
 printf("[ --loop|-l		  - loop the exploit attempts\n");
 printf("[ --type|-t   <n>         - select exploit to try\n");
 printf("[                           0 = null length\n");
 printf("[			    1 = max leak\n");
 printf("[			    n = heartbeat payload_length\n");
 printf("[ --udp|-u               - use dtls/udp\n");
 printf("[\n");
 printf("[ --verbose|-v            - output leak to screen\n");
 printf("[ --help|-h               - this output\n");
 printf("[\n");
 exit(0);
}
